corrected spacing between comparison graphs

--- a/main.css
+++ b/main.css
@@ -260,21 +260,22 @@ body {
   width: 0vw;
 }
 
-#displayBox{
+/* #displayBox{
   min-height: 70vh;
   min-width: 100vw;
-}
+} */
 
 #circlePie {
   top: 28vh;
-  left: 2vw;
+  /* left: 2vw; */
   height: 65vh;
   margin-bottom: auto;
+  font-size: 5vw;
 }
 
 #windRose {
   top: 22vh;
-  left: -8vw;
+  /* left: -2vw; */
   height: 75vh;
   margin-bottom: 2vh;
 }
